# 2600-pages-of-anti-trans-hate

./: README  flake.nix  index.html  pyproject.toml
html/: 0_20200219_james-shupe-formerly-jamie-shupe_forest-wilson_hello-forest.html  100_20200115_vernadette-broyles_fred-deutsch_re-aclu-of-sd-opposes-bill-that-would-criminalize-medically-necessary-care-for-transgender-youth.html  101_janna-farley_aclu-of-sd-opposes-bill-that-would-criminalize-medically-necessary-care-for-transgender-youth.html  102_re-aclu-of-sd-opposes-bill-that-would-criminalize-medically-necessary-care-for-transgender-youth.html  103_20200115_vernadette-broyles_fred-deutsch_re-aclu-of-sd-opposes-bill-that-would-criminalize-medically-necessary-care-for-transgender-youth.html  104_janna-farley_aclu-of-sd-opposes-bill-that-would-criminalize-medically-necessary-care-for-transgender-youth.html  105_re-aclu.html  106_20200119_james-shupe-formerly-jamie-shupe_fred-deutsch-sdlegislature-gov_re-aclu.html  107_20200119_james-shupe-formerly-jamie-shupe_drmcretella-gmail-com-scott-newgent_re-aclu.html  108_re-aclu.html  109_20200119_james-shupe-formerly-jamie-shupe_drmcretella-gmail-com-scott-newgent_re-aclu.html  10_20190819_andre-van-mol_fred-deutsch_re-update.html  110_20200121_james-shupe-formerly-jamie-shupe_vbroyles-childparentrights-org_re-aclu.html  111_20200121_james-shupe-formerly-jamie-shupe_vbroyles-childparentrights-org_re-aclu.html  112_20200121_james-shupe-formerly-jamie-shupe_vbroyles-childparentrights-org_re-aclu.html  113_20200121_james-shupe-formerly-jamie-shupe_vernadette-broyles_re-aclu.html  (+770 more)
(+775 files in other folders)
